--- a/todo3.html
+++ b/todo3.html
@@ -2,16 +2,16 @@
   <style>
     .body{background-color:silver}
     .nav{font-family:Broadway; text-decoration:underline; text-align:center; font-size:48pt; color:black;}
-    .high{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:red; width:50%; height:150px; overflow:auto; float left;}
+    .high{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:red; float: left; width:50%; height:150px; overflow:auto;}
     article.high>ul{color:white;}
     article.high>h1{color:white;}
-    .medium{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:orange; width:50%; height:150px; overflow:auto; float left;}
+    .medium{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:orange; float: left; width:50%; height:150px; overflow:auto;}
     article.medium>ul{color:brown;}
     article.medium>h1{color:brown;}
-    .low{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:gray; width:50%; height:150px; overflow:auto; float left;}
+    .low{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:gray; float: left; width:50%; height:150px; overflow:auto;}
     article.low>ul{color:black;}
     article.low>h1{color:black;}
-    .done{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:black; width:50%; height:150px; overflow:auto; float left;}
+    .done{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:black; float: left; width:50%; height:150px; overflow:auto;}
     article.done>ul{color:cyan; text-decoration:underline;}
     article.done>h1{color:cyan; text-decoration:underline;}
   </style>
