--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         <li><a href = "http://jorgja02.github.io/todo2">CS130 Assignment #2: To Do List Mark II</a></li>
         <li><a href = "http://jorgja02.github.io/todo3">CS130 Assignment #3: To Do List Mark III</a></li>
         <li><a href = "http://jorgja02.github.io/calculator">CS130 Assignment #4: Simple Calculator</a></li>
+        <li><a href = "http://jorgja02.github.io/todoApp">CS130 Assignment #5: To Do App</a></li>
       </ol>
       </article>
     </section>
     
-    <footer><p>This web page was last updated at 8:13pm Central Time on Thurs. Oct. 8, 2015</p></footer>
+    <footer><p>This web page was last updated at 10:31pm Central Time on Thurs. Oct. 22, 2015</p></footer>
   </body>
 </html>
